--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 1,
       "metadata": {
         "pycharm": {
           "is_executing": false
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 2,
       "metadata": {
         "pycharm": {
           "is_executing": false
@@ -59,7 +59,7 @@
         {
           "name": "stdout",
           "text": [
-            "\n"
+            "/Users/trickyetc/Documents/GitHub/data-modelling-with-cassandra\n"
           ],
           "output_type": "stream"
         }
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 3,
       "metadata": {
         "pycharm": {
           "is_executing": false
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 4,
       "metadata": {
         "pycharm": {
           "is_executing": false
@@ -160,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 5,
       "metadata": {
         "pycharm": {
           "is_executing": false
@@ -178,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 6,
       "metadata": {
         "pycharm": {
           "is_executing": false
@@ -196,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 7,
       "metadata": {
         "pycharm": {
           "is_executing": false
@@ -233,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 8,
       "outputs": [],
       "source": "## sessionId \u003d 338, and itemInSession \u003d 4\ntry:\n    session.execute(\"\"\"CREATE TABLE IF NOT EXISTS history_by_session (\n                       session_id bigint, item_in_session int, artist text, song_title text, length decimal,\n                       PRIMARY KEY ((session_id), item_in_session))\n                    \"\"\")\nexcept Exception as e:\n    print(e)",
       "metadata": {
@@ -255,7 +255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 9,
       "metadata": {
         "scrolled": false,
         "pycharm": {
@@ -274,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 10,
       "metadata": {
         "scrolled": true,
         "pycharm": {
@@ -304,7 +304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 11,
       "metadata": {
         "pycharm": {
           "is_executing": false
@@ -324,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 12,
       "outputs": [],
       "source": "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\nfile \u003d \u0027event_datafile_new.csv\u0027\n\nwith open(file, encoding \u003d \u0027utf8\u0027) as f:\n    csvreader \u003d csv.reader(f)\n    next(csvreader) # skip header\n    for line in csvreader:\n        query \u003d \"INSERT INTO history_by_user_session (user_id, session_id, item_in_session, artist, song_title, \" \\\n                \"user_first_name, user_last_name) \"\n        query \u003d query + \"VALUES(%s, %s, %s, %s, %s, %s, %s)\"\n        session.execute(query, (int(line[10]), int(line[8]), int(line[3]), line[0], line[9], line[1], line[4]))",
       "metadata": {
@@ -346,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 13,
       "outputs": [
         {
           "name": "stdout",
@@ -377,7 +377,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 14,
       "metadata": {
         "pycharm": {
           "is_executing": false
@@ -398,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 15,
       "outputs": [],
       "source": "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\nfile \u003d \u0027event_datafile_new.csv\u0027\n\nwith open(file, encoding \u003d \u0027utf8\u0027) as f:\n    csvreader \u003d csv.reader(f)\n    next(csvreader) # skip header\n    for line in csvreader:\n        query \u003d \"INSERT INTO history_by_song_title (user_id, song_title, user_first_name, user_last_name) \"\n        query \u003d query + \"VALUES(%s, %s, %s, %s)\"\n        session.execute(query, (int(line[10]), line[9], line[1], line[4]))\n",
       "metadata": {
@@ -420,7 +420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 17,
       "outputs": [
         {
           "name": "stdout",
